modify: home page style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
     <footer>
         <p class="post-link">
-            <a href="{{ page.original_link | default: '' }}" target="_blank">Read original</a>
+            <a href="{{ page.original_link | default: '' }}" target="_blank">Read Original</a>
         </p>
     </footer>
 </article>
