fix: link to original article

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="site-header">
-    <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <h1><a href="{{ site.link }}/">{{ site.title }}</a></h1>
     <p>{{ site.description }}</p>
 </header>
 
